test/libyul/yulSyntaxTests/more_than_256_analysis_errors.yul
{
    // Using a variable to initialize itself should trigger a "variable is used before declared" error.
    // It's only detected during analysis and is not fatal. Any other non-fatal analysis error would do.
    let x00:=x00 let x01:=x01 let x02:=x02 let x03:=x03 let x04:=x04 let x05:=x05 let x06:=x06 let x07:=x07
    let x08:=x08 let x09:=x09 let x0a:=x0a let x0b:=x0b let x0c:=x0c let x0d:=x0d let x0e:=x0e let x0f:=x0f
    let x10:=x10 let x11:=x11 let x12:=x12 let x13:=x13 let x14:=x14 let x15:=x15 let x16:=x16 let x17:=x17
    let x18:=x18 let x19:=x19 let x1a:=x1a let x1b:=x1b let x1c:=x1c let x1d:=x1d let x1e:=x1e let x1f:=x1f
    let x20:=x20 let x21:=x21 let x22:=x22 let x23:=x23 let x24:=x24 let x25:=x25 let x26:=x26 let x27:=x27
    let x28:=x28 let x29:=x29 let x2a:=x2a let x2b:=x2b let x2c:=x2c let x2d:=x2d let x2e:=x2e let x2f:=x2f
    let x30:=x30 let x31:=x31 let x32:=x32 let x33:=x33 let x34:=x34 let x35:=x35 let x36:=x36 let x37:=x37
    let x38:=x38 let x39:=x39 let x3a:=x3a let x3b:=x3b let x3c:=x3c let x3d:=x3d let x3e:=x3e let x3f:=x3f
    let x40:=x40 let x41:=x41 let x42:=x42 let x43:=x43 let x44:=x44 let x45:=x45 let x46:=x46 let x47:=x47
    let x48:=x48 let x49:=x49 let x4a:=x4a let x4b:=x4b let x4c:=x4c let x4d:=x4d let x4e:=x4e let x4f:=x4f
    let x50:=x50 let x51:=x51 let x52:=x52 let x53:=x53 let x54:=x54 let x55:=x55 let x56:=x56 let x57:=x57
    let x58:=x58 let x59:=x59 let x5a:=x5a let x5b:=x5b let x5c:=x5c let x5d:=x5d let x5e:=x5e let x5f:=x5f
    let x60:=x60 let x61:=x61 let x62:=x62 let x63:=x63 let x64:=x64 let x65:=x65 let x66:=x66 let x67:=x67
    let x68:=x68 let x69:=x69 let x6a:=x6a let x6b:=x6b let x6c:=x6c let x6d:=x6d let x6e:=x6e let x6f:=x6f
    let x70:=x70 let x71:=x71 let x72:=x72 let x73:=x73 let x74:=x74 let x75:=x75 let x76:=x76 let x77:=x77
    let x78:=x78 let x79:=x79 let x7a:=x7a let x7b:=x7b let x7c:=x7c let x7d:=x7d let x7e:=x7e let x7f:=x7f
    let x80:=x80 let x81:=x81 let x82:=x82 let x83:=x83 let x84:=x84 let x85:=x85 let x86:=x86 let x87:=x87
    let x88:=x88 let x89:=x89 let x8a:=x8a let x8b:=x8b let x8c:=x8c let x8d:=x8d let x8e:=x8e let x8f:=x8f
    let x90:=x90 let x91:=x91 let x92:=x92 let x93:=x93 let x94:=x94 let x95:=x95 let x96:=x96 let x97:=x97
    let x98:=x98 let x99:=x99 let x9a:=x9a let x9b:=x9b let x9c:=x9c let x9d:=x9d let x9e:=x9e let x9f:=x9f
    let xa0:=xa0 let xa1:=xa1 let xa2:=xa2 let xa3:=xa3 let xa4:=xa4 let xa5:=xa5 let xa6:=xa6 let xa7:=xa7
    let xa8:=xa8 let xa9:=xa9 let xaa:=xaa let xab:=xab let xac:=xac let xad:=xad let xae:=xae let xaf:=xaf
    let xb0:=xb0 let xb1:=xb1 let xb2:=xb2 let xb3:=xb3 let xb4:=xb4 let xb5:=xb5 let xb6:=xb6 let xb7:=xb7
    let xb8:=xb8 let xb9:=xb9 let xba:=xba let xbb:=xbb let xbc:=xbc let xbd:=xbd let xbe:=xbe let xbf:=xbf
    let xc0:=xc0 let xc1:=xc1 let xc2:=xc2 let xc3:=xc3 let xc4:=xc4 let xc5:=xc5 let xc6:=xc6 let xc7:=xc7
    let xc8:=xc8 let xc9:=xc9 let xca:=xca let xcb:=xcb let xcc:=xcc let xcd:=xcd let xce:=xce let xcf:=xcf
    let xd0:=xd0 let xd1:=xd1 let xd2:=xd2 let xd3:=xd3 let xd4:=xd4 let xd5:=xd5 let xd6:=xd6 let xd7:=xd7
    let xd8:=xd8 let xd9:=xd9 let xda:=xda let xdb:=xdb let xdc:=xdc let xdd:=xdd let xde:=xde let xdf:=xdf
    let xe0:=xe0 let xe1:=xe1 let xe2:=xe2 let xe3:=xe3 let xe4:=xe4 let xe5:=xe5 let xe6:=xe6 let xe7:=xe7
    let xe8:=xe8 let xe9:=xe9 let xea:=xea let xeb:=xeb let xec:=xec let xed:=xed let xee:=xee let xef:=xef
    let xf0:=xf0 let xf1:=xf1 let xf2:=xf2 let xf3:=xf3 let xf4:=xf4 let xf5:=xf5 let xf6:=xf6 let xf7:=xf7
    let xf8:=xf8 let xf9:=xf9 let xfa:=xfa let xfb:=xfb let xfc:=xfc let xfd:=xfd let xfe:=xfe let xff:=xff
    let x100:=x100

}
// ----
// DeclarationError 4990: (224-227): Variable x00 used before it was declared.
// DeclarationError 4990: (237-240): Variable x01 used before it was declared.
// DeclarationError 4990: (250-253): Variable x02 used before it was declared.
// DeclarationError 4990: (263-266): Variable x03 used before it was declared.
// DeclarationError 4990: (276-279): Variable x04 used before it was declared.
// DeclarationError 4990: (289-292): Variable x05 used before it was declared.
// DeclarationError 4990: (302-305): Variable x06 used before it was declared.
// DeclarationError 4990: (315-318): Variable x07 used before it was declared.
// DeclarationError 4990: (332-335): Variable x08 used before it was declared.
// DeclarationError 4990: (345-348): Variable x09 used before it was declared.
// DeclarationError 4990: (358-361): Variable x0a used before it was declared.
// DeclarationError 4990: (371-374): Variable x0b used before it was declared.
// DeclarationError 4990: (384-387): Variable x0c used before it was declared.
// DeclarationError 4990: (397-400): Variable x0d used before it was declared.
// DeclarationError 4990: (410-413): Variable x0e used before it was declared.
// DeclarationError 4990: (423-426): Variable x0f used before it was declared.
// DeclarationError 4990: (440-443): Variable x10 used before it was declared.
// DeclarationError 4990: (453-456): Variable x11 used before it was declared.
// DeclarationError 4990: (466-469): Variable x12 used before it was declared.
// DeclarationError 4990: (479-482): Variable x13 used before it was declared.
// DeclarationError 4990: (492-495): Variable x14 used before it was declared.
// DeclarationError 4990: (505-508): Variable x15 used before it was declared.
// DeclarationError 4990: (518-521): Variable x16 used before it was declared.
// DeclarationError 4990: (531-534): Variable x17 used before it was declared.
// DeclarationError 4990: (548-551): Variable x18 used before it was declared.
// DeclarationError 4990: (561-564): Variable x19 used before it was declared.
// DeclarationError 4990: (574-577): Variable x1a used before it was declared.
// DeclarationError 4990: (587-590): Variable x1b used before it was declared.
// DeclarationError 4990: (600-603): Variable x1c used before it was declared.
// DeclarationError 4990: (613-616): Variable x1d used before it was declared.
// DeclarationError 4990: (626-629): Variable x1e used before it was declared.
// DeclarationError 4990: (639-642): Variable x1f used before it was declared.
// DeclarationError 4990: (656-659): Variable x20 used before it was declared.
// DeclarationError 4990: (669-672): Variable x21 used before it was declared.
// DeclarationError 4990: (682-685): Variable x22 used before it was declared.
// DeclarationError 4990: (695-698): Variable x23 used before it was declared.
// DeclarationError 4990: (708-711): Variable x24 used before it was declared.
// DeclarationError 4990: (721-724): Variable x25 used before it was declared.
// DeclarationError 4990: (734-737): Variable x26 used before it was declared.
// DeclarationError 4990: (747-750): Variable x27 used before it was declared.
// DeclarationError 4990: (764-767): Variable x28 used before it was declared.
// DeclarationError 4990: (777-780): Variable x29 used before it was declared.
// DeclarationError 4990: (790-793): Variable x2a used before it was declared.
// DeclarationError 4990: (803-806): Variable x2b used before it was declared.
// DeclarationError 4990: (816-819): Variable x2c used before it was declared.
// DeclarationError 4990: (829-832): Variable x2d used before it was declared.
// DeclarationError 4990: (842-845): Variable x2e used before it was declared.
// DeclarationError 4990: (855-858): Variable x2f used before it was declared.
// DeclarationError 4990: (872-875): Variable x30 used before it was declared.
// DeclarationError 4990: (885-888): Variable x31 used before it was declared.
// DeclarationError 4990: (898-901): Variable x32 used before it was declared.
// DeclarationError 4990: (911-914): Variable x33 used before it was declared.
// DeclarationError 4990: (924-927): Variable x34 used before it was declared.
// DeclarationError 4990: (937-940): Variable x35 used before it was declared.
// DeclarationError 4990: (950-953): Variable x36 used before it was declared.
// DeclarationError 4990: (963-966): Variable x37 used before it was declared.
// DeclarationError 4990: (980-983): Variable x38 used before it was declared.
// DeclarationError 4990: (993-996): Variable x39 used before it was declared.
// DeclarationError 4990: (1006-1009): Variable x3a used before it was declared.
// DeclarationError 4990: (1019-1022): Variable x3b used before it was declared.
// DeclarationError 4990: (1032-1035): Variable x3c used before it was declared.
// DeclarationError 4990: (1045-1048): Variable x3d used before it was declared.
// DeclarationError 4990: (1058-1061): Variable x3e used before it was declared.
// DeclarationError 4990: (1071-1074): Variable x3f used before it was declared.
// DeclarationError 4990: (1088-1091): Variable x40 used before it was declared.
// DeclarationError 4990: (1101-1104): Variable x41 used before it was declared.
// DeclarationError 4990: (1114-1117): Variable x42 used before it was declared.
// DeclarationError 4990: (1127-1130): Variable x43 used before it was declared.
// DeclarationError 4990: (1140-1143): Variable x44 used before it was declared.
// DeclarationError 4990: (1153-1156): Variable x45 used before it was declared.
// DeclarationError 4990: (1166-1169): Variable x46 used before it was declared.
// DeclarationError 4990: (1179-1182): Variable x47 used before it was declared.
// DeclarationError 4990: (1196-1199): Variable x48 used before it was declared.
// DeclarationError 4990: (1209-1212): Variable x49 used before it was declared.
// DeclarationError 4990: (1222-1225): Variable x4a used before it was declared.
// DeclarationError 4990: (1235-1238): Variable x4b used before it was declared.
// DeclarationError 4990: (1248-1251): Variable x4c used before it was declared.
// DeclarationError 4990: (1261-1264): Variable x4d used before it was declared.
// DeclarationError 4990: (1274-1277): Variable x4e used before it was declared.
// DeclarationError 4990: (1287-1290): Variable x4f used before it was declared.
// DeclarationError 4990: (1304-1307): Variable x50 used before it was declared.
// DeclarationError 4990: (1317-1320): Variable x51 used before it was declared.
// DeclarationError 4990: (1330-1333): Variable x52 used before it was declared.
// DeclarationError 4990: (1343-1346): Variable x53 used before it was declared.
// DeclarationError 4990: (1356-1359): Variable x54 used before it was declared.
// DeclarationError 4990: (1369-1372): Variable x55 used before it was declared.
// DeclarationError 4990: (1382-1385): Variable x56 used before it was declared.
// DeclarationError 4990: (1395-1398): Variable x57 used before it was declared.
// DeclarationError 4990: (1412-1415): Variable x58 used before it was declared.
// DeclarationError 4990: (1425-1428): Variable x59 used before it was declared.
// DeclarationError 4990: (1438-1441): Variable x5a used before it was declared.
// DeclarationError 4990: (1451-1454): Variable x5b used before it was declared.
// DeclarationError 4990: (1464-1467): Variable x5c used before it was declared.
// DeclarationError 4990: (1477-1480): Variable x5d used before it was declared.
// DeclarationError 4990: (1490-1493): Variable x5e used before it was declared.
// DeclarationError 4990: (1503-1506): Variable x5f used before it was declared.
// DeclarationError 4990: (1520-1523): Variable x60 used before it was declared.
// DeclarationError 4990: (1533-1536): Variable x61 used before it was declared.
// DeclarationError 4990: (1546-1549): Variable x62 used before it was declared.
// DeclarationError 4990: (1559-1562): Variable x63 used before it was declared.
// DeclarationError 4990: (1572-1575): Variable x64 used before it was declared.
// DeclarationError 4990: (1585-1588): Variable x65 used before it was declared.
// DeclarationError 4990: (1598-1601): Variable x66 used before it was declared.
// DeclarationError 4990: (1611-1614): Variable x67 used before it was declared.
// DeclarationError 4990: (1628-1631): Variable x68 used before it was declared.
// DeclarationError 4990: (1641-1644): Variable x69 used before it was declared.
// DeclarationError 4990: (1654-1657): Variable x6a used before it was declared.
// DeclarationError 4990: (1667-1670): Variable x6b used before it was declared.
// DeclarationError 4990: (1680-1683): Variable x6c used before it was declared.
// DeclarationError 4990: (1693-1696): Variable x6d used before it was declared.
// DeclarationError 4990: (1706-1709): Variable x6e used before it was declared.
// DeclarationError 4990: (1719-1722): Variable x6f used before it was declared.
// DeclarationError 4990: (1736-1739): Variable x70 used before it was declared.
// DeclarationError 4990: (1749-1752): Variable x71 used before it was declared.
// DeclarationError 4990: (1762-1765): Variable x72 used before it was declared.
// DeclarationError 4990: (1775-1778): Variable x73 used before it was declared.
// DeclarationError 4990: (1788-1791): Variable x74 used before it was declared.
// DeclarationError 4990: (1801-1804): Variable x75 used before it was declared.
// DeclarationError 4990: (1814-1817): Variable x76 used before it was declared.
// DeclarationError 4990: (1827-1830): Variable x77 used before it was declared.
// DeclarationError 4990: (1844-1847): Variable x78 used before it was declared.
// DeclarationError 4990: (1857-1860): Variable x79 used before it was declared.
// DeclarationError 4990: (1870-1873): Variable x7a used before it was declared.
// DeclarationError 4990: (1883-1886): Variable x7b used before it was declared.
// DeclarationError 4990: (1896-1899): Variable x7c used before it was declared.
// DeclarationError 4990: (1909-1912): Variable x7d used before it was declared.
// DeclarationError 4990: (1922-1925): Variable x7e used before it was declared.
// DeclarationError 4990: (1935-1938): Variable x7f used before it was declared.
// DeclarationError 4990: (1952-1955): Variable x80 used before it was declared.
// DeclarationError 4990: (1965-1968): Variable x81 used before it was declared.
// DeclarationError 4990: (1978-1981): Variable x82 used before it was declared.
// DeclarationError 4990: (1991-1994): Variable x83 used before it was declared.
// DeclarationError 4990: (2004-2007): Variable x84 used before it was declared.
// DeclarationError 4990: (2017-2020): Variable x85 used before it was declared.
// DeclarationError 4990: (2030-2033): Variable x86 used before it was declared.
// DeclarationError 4990: (2043-2046): Variable x87 used before it was declared.
// DeclarationError 4990: (2060-2063): Variable x88 used before it was declared.
// DeclarationError 4990: (2073-2076): Variable x89 used before it was declared.
// DeclarationError 4990: (2086-2089): Variable x8a used before it was declared.
// DeclarationError 4990: (2099-2102): Variable x8b used before it was declared.
// DeclarationError 4990: (2112-2115): Variable x8c used before it was declared.
// DeclarationError 4990: (2125-2128): Variable x8d used before it was declared.
// DeclarationError 4990: (2138-2141): Variable x8e used before it was declared.
// DeclarationError 4990: (2151-2154): Variable x8f used before it was declared.
// DeclarationError 4990: (2168-2171): Variable x90 used before it was declared.
// DeclarationError 4990: (2181-2184): Variable x91 used before it was declared.
// DeclarationError 4990: (2194-2197): Variable x92 used before it was declared.
// DeclarationError 4990: (2207-2210): Variable x93 used before it was declared.
// DeclarationError 4990: (2220-2223): Variable x94 used before it was declared.
// DeclarationError 4990: (2233-2236): Variable x95 used before it was declared.
// DeclarationError 4990: (2246-2249): Variable x96 used before it was declared.
// DeclarationError 4990: (2259-2262): Variable x97 used before it was declared.
// DeclarationError 4990: (2276-2279): Variable x98 used before it was declared.
// DeclarationError 4990: (2289-2292): Variable x99 used before it was declared.
// DeclarationError 4990: (2302-2305): Variable x9a used before it was declared.
// DeclarationError 4990: (2315-2318): Variable x9b used before it was declared.
// DeclarationError 4990: (2328-2331): Variable x9c used before it was declared.
// DeclarationError 4990: (2341-2344): Variable x9d used before it was declared.
// DeclarationError 4990: (2354-2357): Variable x9e used before it was declared.
// DeclarationError 4990: (2367-2370): Variable x9f used before it was declared.
// DeclarationError 4990: (2384-2387): Variable xa0 used before it was declared.
// DeclarationError 4990: (2397-2400): Variable xa1 used before it was declared.
// DeclarationError 4990: (2410-2413): Variable xa2 used before it was declared.
// DeclarationError 4990: (2423-2426): Variable xa3 used before it was declared.
// DeclarationError 4990: (2436-2439): Variable xa4 used before it was declared.
// DeclarationError 4990: (2449-2452): Variable xa5 used before it was declared.
// DeclarationError 4990: (2462-2465): Variable xa6 used before it was declared.
// DeclarationError 4990: (2475-2478): Variable xa7 used before it was declared.
// DeclarationError 4990: (2492-2495): Variable xa8 used before it was declared.
// DeclarationError 4990: (2505-2508): Variable xa9 used before it was declared.
// DeclarationError 4990: (2518-2521): Variable xaa used before it was declared.
// DeclarationError 4990: (2531-2534): Variable xab used before it was declared.
// DeclarationError 4990: (2544-2547): Variable xac used before it was declared.
// DeclarationError 4990: (2557-2560): Variable xad used before it was declared.
// DeclarationError 4990: (2570-2573): Variable xae used before it was declared.
// DeclarationError 4990: (2583-2586): Variable xaf used before it was declared.
// DeclarationError 4990: (2600-2603): Variable xb0 used before it was declared.
// DeclarationError 4990: (2613-2616): Variable xb1 used before it was declared.
// DeclarationError 4990: (2626-2629): Variable xb2 used before it was declared.
// DeclarationError 4990: (2639-2642): Variable xb3 used before it was declared.
// DeclarationError 4990: (2652-2655): Variable xb4 used before it was declared.
// DeclarationError 4990: (2665-2668): Variable xb5 used before it was declared.
// DeclarationError 4990: (2678-2681): Variable xb6 used before it was declared.
// DeclarationError 4990: (2691-2694): Variable xb7 used before it was declared.
// DeclarationError 4990: (2708-2711): Variable xb8 used before it was declared.
// DeclarationError 4990: (2721-2724): Variable xb9 used before it was declared.
// DeclarationError 4990: (2734-2737): Variable xba used before it was declared.
// DeclarationError 4990: (2747-2750): Variable xbb used before it was declared.
// DeclarationError 4990: (2760-2763): Variable xbc used before it was declared.
// DeclarationError 4990: (2773-2776): Variable xbd used before it was declared.
// DeclarationError 4990: (2786-2789): Variable xbe used before it was declared.
// DeclarationError 4990: (2799-2802): Variable xbf used before it was declared.
// DeclarationError 4990: (2816-2819): Variable xc0 used before it was declared.
// DeclarationError 4990: (2829-2832): Variable xc1 used before it was declared.
// DeclarationError 4990: (2842-2845): Variable xc2 used before it was declared.
// DeclarationError 4990: (2855-2858): Variable xc3 used before it was declared.
// DeclarationError 4990: (2868-2871): Variable xc4 used before it was declared.
// DeclarationError 4990: (2881-2884): Variable xc5 used before it was declared.
// DeclarationError 4990: (2894-2897): Variable xc6 used before it was declared.
// DeclarationError 4990: (2907-2910): Variable xc7 used before it was declared.
// DeclarationError 4990: (2924-2927): Variable xc8 used before it was declared.
// DeclarationError 4990: (2937-2940): Variable xc9 used before it was declared.
// DeclarationError 4990: (2950-2953): Variable xca used before it was declared.
// DeclarationError 4990: (2963-2966): Variable xcb used before it was declared.
// DeclarationError 4990: (2976-2979): Variable xcc used before it was declared.
// DeclarationError 4990: (2989-2992): Variable xcd used before it was declared.
// DeclarationError 4990: (3002-3005): Variable xce used before it was declared.
// DeclarationError 4990: (3015-3018): Variable xcf used before it was declared.
// DeclarationError 4990: (3032-3035): Variable xd0 used before it was declared.
// DeclarationError 4990: (3045-3048): Variable xd1 used before it was declared.
// DeclarationError 4990: (3058-3061): Variable xd2 used before it was declared.
// DeclarationError 4990: (3071-3074): Variable xd3 used before it was declared.
// DeclarationError 4990: (3084-3087): Variable xd4 used before it was declared.
// DeclarationError 4990: (3097-3100): Variable xd5 used before it was declared.
// DeclarationError 4990: (3110-3113): Variable xd6 used before it was declared.
// DeclarationError 4990: (3123-3126): Variable xd7 used before it was declared.
// DeclarationError 4990: (3140-3143): Variable xd8 used before it was declared.
// DeclarationError 4990: (3153-3156): Variable xd9 used before it was declared.
// DeclarationError 4990: (3166-3169): Variable xda used before it was declared.
// DeclarationError 4990: (3179-3182): Variable xdb used before it was declared.
// DeclarationError 4990: (3192-3195): Variable xdc used before it was declared.
// DeclarationError 4990: (3205-3208): Variable xdd used before it was declared.
// DeclarationError 4990: (3218-3221): Variable xde used before it was declared.
// DeclarationError 4990: (3231-3234): Variable xdf used before it was declared.
// DeclarationError 4990: (3248-3251): Variable xe0 used before it was declared.
// DeclarationError 4990: (3261-3264): Variable xe1 used before it was declared.
// DeclarationError 4990: (3274-3277): Variable xe2 used before it was declared.
// DeclarationError 4990: (3287-3290): Variable xe3 used before it was declared.
// DeclarationError 4990: (3300-3303): Variable xe4 used before it was declared.
// DeclarationError 4990: (3313-3316): Variable xe5 used before it was declared.
// DeclarationError 4990: (3326-3329): Variable xe6 used before it was declared.
// DeclarationError 4990: (3339-3342): Variable xe7 used before it was declared.
// DeclarationError 4990: (3356-3359): Variable xe8 used before it was declared.
// DeclarationError 4990: (3369-3372): Variable xe9 used before it was declared.
// DeclarationError 4990: (3382-3385): Variable xea used before it was declared.
// DeclarationError 4990: (3395-3398): Variable xeb used before it was declared.
// DeclarationError 4990: (3408-3411): Variable xec used before it was declared.
// DeclarationError 4990: (3421-3424): Variable xed used before it was declared.
// DeclarationError 4990: (3434-3437): Variable xee used before it was declared.
// DeclarationError 4990: (3447-3450): Variable xef used before it was declared.
// DeclarationError 4990: (3464-3467): Variable xf0 used before it was declared.
// DeclarationError 4990: (3477-3480): Variable xf1 used before it was declared.
// DeclarationError 4990: (3490-3493): Variable xf2 used before it was declared.
// DeclarationError 4990: (3503-3506): Variable xf3 used before it was declared.
// DeclarationError 4990: (3516-3519): Variable xf4 used before it was declared.
// DeclarationError 4990: (3529-3532): Variable xf5 used before it was declared.
// DeclarationError 4990: (3542-3545): Variable xf6 used before it was declared.
// DeclarationError 4990: (3555-3558): Variable xf7 used before it was declared.
// DeclarationError 4990: (3572-3575): Variable xf8 used before it was declared.
// DeclarationError 4990: (3585-3588): Variable xf9 used before it was declared.
// DeclarationError 4990: (3598-3601): Variable xfa used before it was declared.
// DeclarationError 4990: (3611-3614): Variable xfb used before it was declared.
// DeclarationError 4990: (3624-3627): Variable xfc used before it was declared.
// DeclarationError 4990: (3637-3640): Variable xfd used before it was declared.
// DeclarationError 4990: (3650-3653): Variable xfe used before it was declared.
// DeclarationError 4990: (3663-3666): Variable xff used before it was declared.
// Warning 4013: There are more than 256 errors. Aborting.
